<resources>
    <string name="app_name">Pro Quiz</string>

    <string name="todo">T0DO</string>
    <string name="timeout">Opps Time Out...</string>
    <string name="change">Change Password</string>
    <string name="search">Search</string>
    <string name="exit">Try Again</string>
    <string name="reset">Reset Password</string>

    //sign_up strings.
    <string name="submit">SUBMIT</string>
    <string name="by_signingUp_you_agree_to_our_privacy_policy_and_terms_and_conditons">By signingup you agree to our privacy policy and terms and conditons.</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT ? Login here</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="password">Password</string>
    <string name="email_address">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile Number</string>

    //Login Strings
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_your_password">Forgot your Password</string>
    <string name="login">Login</string>
    <string name="login_with_account">Login with Account</string>
    <string name="logout">Logout</string>

    //Menu
    <string name="home">Home</string>
    <string name="rank">Rank</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>

    //Quiz Strings
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_1">TextView</string>
    <string name="textview_2">TextView</string>
    <string name="textview_3">TextView</string>
    <string name="textview_4">TextView</string>
    <string name="who_is_the_father_of_android">Who is the Father of Android ?</string>
    <string name="_25">00:25</string>
    <string name="_1_10">1/10</string>
    <string name="quit">QUIT</string>
    <string name="next">NEXT</string>

    //Wallet Strings
    <string name="current_coins">Current Coins</string>
    <string name="_50000">_____</string>

    //Result Strings
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="_8_10">8/10</string>
    <string name="earned_coins">EARNED COINS</string>
    <string name="_100">100</string>

</resources>