<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/profile_color"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="15dp"
            android:drawableTint="@color/icon"
            android:ems="10"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:background="@drawable/border"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/phoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxLength="10"
                android:textColor="@color/profile_color"
                android:drawableLeft="@drawable/phone"
                android:drawableTint="@color/icon"
                android:drawablePadding="15dp"
                android:inputType="number"
                android:hint="@string/mobile_no"
                android:padding="15dp"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
            <EditText
                android:id="@+id/emailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/profile_color"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="15dp"
                android:drawableTint="@color/icon"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:layout_margin="10dp"
                android:textColor="@color/profile_color"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="15dp"
                android:drawableTint="@color/icon"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="15dp"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:backgroundTint="@color/icon" />
            <TextView
                android:id="@+id/clickLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/already_have_an_account"
                app:backgroundTint="@color/icon" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>