<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:background="@drawable/background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer"/>

    <TextView android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_timer"
        android:text="@string/_25"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView android:id="@+id/questionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:drawableRight="@drawable/ic_question"
        android:drawablePadding="10dp"
        android:text="@string/_1_10"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/who_is_the_father_of_android"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"/>

    <TextView android:id="@+id/option_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:padding="15dp"
        android:background="@drawable/border"
        android:text="@string/textview_1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        />

    <TextView android:id="@+id/option_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"

        android:background="@drawable/border"
        android:text="@string/textview_1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/option_1"
        app:layout_constraintStart_toStartOf="@+id/option_1"
        app:layout_constraintTop_toBottomOf="@+id/option_1"
         />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"

        android:background="@drawable/border"
        android:text="@string/textview_1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/option_2"
        app:layout_constraintStart_toStartOf="@+id/option_2"
        app:layout_constraintTop_toBottomOf="@+id/option_2" />

    <TextView android:id="@+id/option_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"

        android:background="@drawable/border"
        android:text="@string/textview_1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/option_3"
        app:layout_constraintStart_toStartOf="@+id/option_3"
        app:layout_constraintTop_toBottomOf="@+id/option_3"
         />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_4" />



</androidx.constraintlayout.widget.ConstraintLayout>